<resources>
    <string name="app_name">Meteoradar Dev</string>
    <string name="app_name_simple">Meteoradar</string>
    <string name="menu_item_theme">Theme</string>
    <string name="updated">Updated</string>
    <string name="update">Update</string>
    <string name="no_internet_connection">Internet connection is not available</string>
    <string name="no_server_connection">Server connection is not available</string>
    <string name="image_not_available">Image is not available</string>
    <string name="status_radar_off">Currently radar is not working</string>
    <string name="follow_system_theme">Folow system theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="choose_theme">Choose theme</string>
    <string name="choose_city">Choose city</string>
    <string name="no_weather">No weather</string>
    <string name="laminated_clouds">Laminated clouds</string>
    <string name="light_precipitation">Light precipitation</string>
    <string name="medium_precipitation">Medium precipitation</string>
    <string name="strong_precipitation">Strong precipitation</string>
    <string name="convective_clouds">Convective clouds</string>
    <string name="light_convective_rainfall">Light convective rainfall</string>
    <string name="medium_convective_rainfall">Medium convective rainfall</string>
    <string name="strong_convective_rainfall">Strong convective rainfall</string>
    <string name="thunderstorm_30_70">Thunderstorm – probability 30–70%</string>
    <string name="thunderstorm_70_90">Thunderstorm – probability 70–90%</string>
    <string name="thunderstorm_90_100">Thunderstorm – probability 90–100%</string>
    <string name="light_hail">Light hail</string>
    <string name="medium_hail">Medium hail</string>
    <string name="strong_hail">Strong hail</string>
    <string name="light_squall">Light squall</string>
    <string name="medium_squall">Medium squall</string>
    <string name="strong_squall">Strong squall</string>
    <string name="cancel">Cancel</string>
    <string name="kiev">Kiev</string>
    <string name="minsk">Minsk</string>
    <string name="brest">Brest</string>
    <string name="gomel">Gomel</string>
    <string name="smolensk">Smolensk</string>
    <string name="bryansk">Bryansk</string>
    <string name="kursk">Kursk</string>
    <string name="velikiye_luki">Velikiye Luki</string>
    <string name="zaporozhye">Zaporizhzhia</string>
    <string name="grodno">Grodno</string>
    <string name="vitebsk">Vitebsk</string>
    <string name="legend_button">Legend</string>
    <string name="default_date">00.00.0000</string>
</resources>
