<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal"
            android:text="@string/no_weather"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorNoWeather"
            android:src="@drawable/image_border" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/laminated_clouds"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorLaminatedClouds"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/light_precipitation"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorLightPrecipitation"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/medium_precipitation"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorMediumPrecipitation"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/strong_precipitation"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorStrongPrecipitation"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/convective_clouds"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorConvectiveClouds"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/light_convective_rainfall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorLightConvectiveRainfall"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/medium_convective_rainfall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorMediumConvectiveRainfall"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/strong_convective_rainfall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorStrongConvectiveRainfall"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/thunderstorm_30_70"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorThunderstorm_30_70"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/thunderstorm_70_90"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorThunderstorm_70_90"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/thunderstorm_90_100"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorThunderstorm_90_100"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/light_hail"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorLightHail"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/medium_hail"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorMediumHail"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/strong_hail"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorStrongHail"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/light_squall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorLightSquall"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/medium_squall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorMediumSquall"
            android:src="@drawable/image_border" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/strong_squall"
            android:textSize="@dimen/info_text_size" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/info_list_rect_margin"
            android:background="@color/colorStrongSquall"
            android:src="@drawable/image_border" />

    </RelativeLayout>
</LinearLayout>
